# motoko_debugger

./: .gitignore  .wasminspect-history  Cargo.toml  README.md  demo.wasm  pa_cars.wasm  tmp
crates/collections/src/: head_vec.rs
crates/collections/src/arena/: guarded.rs
crates/core/src/: value.rs
crates/debugger/: Cargo.toml
crates/debugger/src/: breakpoint.rs  debugger.rs  heap.rs  lib.rs  process.rs
crates/debugger/src/commands/: breakpoint.rs  command.rs  debugger.rs  frame.rs  global.rs  list.rs  local.rs  mod.rs  process.rs  run.rs  sourcemap.rs  thread.rs  utils.rs
crates/debugger/src/dwarf/: mod.rs  mod_gimil_0311.rs  utils.rs
crates/debugger/tests/: addTwoExportWithMain2.wasm  addTwoExportWithMain3.wasm  addTwoWithMain2.wasm  addthree.wasm  backend.wasm  debugger_test.rs  demo.wasm  fib  lib_wasm.wasm  lib_wasm.wat  main.wasm  main.wat  test2.wasm  test_local.wasm  test_local.wat  test_step.wasm
crates/debugger/tests/aardvark/: demo.mo  demo.wasm  demo.wat
crates/debugger/tests/array/: demo.mo  demo.wasm  demo.wat
crates/debugger/tests/float-fmt/: demo.mo  demo.wasm  demo.wat
crates/debugger/tests/for/: demo.mo  demo.wasm  demo.wat
crates/debugger/tests/motoko-hello-world/: demo.mo  demo.wasm  demo.wat
crates/debugger/tests/motoko-quicksort/: demo.mo  demo.wasm  demo.wat
crates/debugger/tests/motoko-quicksort-float/: demo.mo  demo.wat
crates/debugger/tests/native-wat-for-global/: demo.wasm  demo.wat  script  test.wasm
crates/debugger/tests/pa_cars/: demo.wat
crates/debugger/tests/rust-wasm-for-breakpoint/: demo.wasm  script
crates/debugger/tests/simple-demo/demo/: Cargo.toml
crates/debugger/tests/simple-demo/demo/src/: lib.rs
crates/inst_macro/: Cargo.toml
crates/ir/: Cargo.toml
crates/ir/src/: enum.rs  lib.rs  sequence.rs  visit_regs.rs
crates/wasi/src/sync/: mod.rs
crates/wasmi/src/: linker.rs  store.rs
crates/wasmi/src/engine/: code_map.rs  mod.rs
crates/wasmi/src/func/: caller.rs  mod.rs
crates/wasmi/src/instance/: mod.rs
crates/wasmi/src/module/: custom_section.rs  mod.rs  parser.rs
wasmi/: .wasminspect-history  Cargo.toml  output.txt  tmp
wasmi/crates/debugger/: Cargo.toml
wasmi/crates/debugger/src/: debugger.rs  func_instance.rs  lib.rs  process.rs
wasmi/crates/debugger/tests/: addTwoExportWithMain4.wasm  debugger.rs  debugger_test.rs  fib-wasm.mo.wasm  fib.wat  lib_wasm.wasm
wasmi/crates/ir/src/: enum.rs
wasmi/crates/wasmi/benches/rust/: Cargo.toml  README.md
wasmi/crates/wasmi/benches/rust/.github/workflows/: main.yml
wasmi/crates/wasmi/benches/rust/cases/tiny_keccak/: Cargo.toml
wasmi/crates/wasmi/benches/rust/src/: main.rs
wasmi/crates/wasmi/src/: lib.rs  linker.rs  store.rs
wasminspect/: Cargo.toml  rust-toolchain.toml
wasminspect/crates/debugger/: Cargo.toml
wasminspect/crates/debugger-server/src/: debugger_proxy.rs
wasminspect/crates/debugger/src/: debugger.rs  (+2 more)
wasminspect/tests/: debugger.rs
(+87 files in other folders)
