[package]
name = "wasmi_debugger"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
linefeed = "0.6.0"
clap = "2.33.0"
structopt = "0.3"
thiserror = "1.0.9"
anyhow = "1.0.26"
wasmparser = { version = "0.100.2", package = "wasmparser-nostd", default-features = false }
gimli = "0.31.1"
log = "0.4.8"
num-bigint = "0.4"
shell-words = "1.0.0"
cap-std = "3.4.0"
signal-hook = "0.3.0"
wat = "1"
env_logger = "0.7.1"

wasmi = { workspace = true }
wasmi_core = { workspace = true }
wasmi_collections = { workspace = true }
wasmi_ir = { workspace = true }
wasmi_wasi = { workspace = true }

[features]
remote-api = []
default = []