[package]
name = "wasmi_ir"
version.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/wasmi_ir/"
description = "WebAssembly interpreter internal bytecode representation"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude = [
    "benches/wat",
    "benches/wasm",
    "tests/spec/testsuite",
    "**.wast",
]

[dependencies]
wasmi_core = { workspace = true }
wasmi_inst_macro = { workspace = true }
wasmparser = { version = "0.100.2", package = "wasmparser-nostd", default-features = false }
anyhow = "1.0.26"

[features]
default = ["std"]
std = [
    "wasmi_core/std",
]
