[package]
name = "wasmi_benches_tiny_keccak"
version.workspace = true
publish.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
